--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -6,6 +6,53 @@
  # @author Jérémy Levron <jeremylevron@19h47.fr> (https://19h47.fr)
  #}
 
-<header class="{{ html_classes( '', classes | default( [] ) | join( ' ' ) ) }}">
-	HEADER
+<header class="{{ html_classes( 'py-3 lg:py-6 relative', classes | default( [] ) | join( ' ' ) ) }}">
+	<div class="container sm:grid sm:grid-cols-12 sm:gap-6">
+		<a href="{{ site.link }}" class="text-2xl font-heading text-center block sm:inline-block sm:align-middle sm:text-left sm:col-span-6 lg:col-span-5">
+			Le parc<br>
+			du château des Ormeaux
+			<span class="text-sm font-body block">24 Route de Noizay, 37530 Nazelles</span>
+		</a>
+		<div class="mt-6 sm:mt-0 sm:flex sm:items-center sm:justify-end sm:col-span-6 lg:justify-center lg:col-span-2">
+			<a class="button w-full" href="">{{- __( 'Contact', 'le-chateau-des-ormeaux' ) -}}</a>
+		</div>
+		<div class="hidden lg:col-span-5 lg:flex lg:items-center lg:justify-end gap-6">
+			<ul
+				class="flex gap-6 text-lg"
+				itemscope
+				itemtype="http://schema.org/SiteNavigationElement"
+			>
+				{% for item in nav_menus.main.get_items() %}
+					<li class="{{ html_classes() }}">
+						<a
+							href="{{ item.url }}"
+							class="{{ html_classes(
+								'hover:underline',
+								item.current ? 'underline' : '',
+								item.classes | join( ' ' ),
+							) }}"
+							itemprop="url"
+							{{ item.is_target_blank or item.is_external ? " target=\"#{item.target}\" rel=\"noopener noreferer\"" }}
+						>
+							{{- item.title -}}
+						</a>
+					</li>
+				{% endfor %}
+			</ul>
+			<ul class="flex items-center gap-3">
+				{% for language in pll_the_languages() %}
+					<li>
+						{% if language.current_lang %}
+							<img class="w-9 h-6 block" title="{{ language.name }}" src="{{ theme.manifest[ 'img/svg/flag-' ~ language.slug ~  '.svg' ] }}" alt="" width="36" height="24">
+						{% else %}
+							<a aria-label="{{ language.name }}" title="{{ language.name }}" class="{{ html_classes( language.current_lang ? 'is-active' ) }}" href="{{ language.url }}">
+								<img class="w-9 h-auto block" src="{{ theme.manifest[ 'img/svg/flag-' ~ language.slug ~  '.svg' ] }}" alt="">
+							</a>
+						{% endif %}
+					</li>
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
+	<hr class="block w-full h-px bg-gray-very-light border-none absolute bottom-0 inset-x-0">
 </header>
