--- a/views/pages/front-page.html.twig
+++ b/views/pages/front-page.html.twig
@@ -6,3 +6,26 @@
  #}
 
 {% extends 'index.html.twig' %}
+
+{% block content %}
+	<main>
+
+		{%- if post.content -%}
+
+				<div class="container lg:grid lg:grid-cols-12">
+					<div class="text-center lg:col-start-4 lg:col-span-6">
+						<h1
+							class="{{ html_classes( 'text-7xl font-heading' ) }}"
+						>Le parc<br>du château des Ormeaux</h1>
+
+						<p class="text-2xl mt-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas consequat nulla eget risus consectetur tincidunt. Sed rutrum venenatis scelerisque</p>
+						<a class="button mt-6" href="">{{- __( 'Contact', 'le-chateau-des-ormeaux' ) -}}</a>
+					</div>
+				</div>
+			</div>
+		{%- endif -%}
+
+		{{- include( 'blocks/blocks.html.twig', { blocks: post.meta( 'blocks' ), classes: [ 'relative z-2' ] } ) -}}
+
+	</main>
+{% endblock %}
