:sparkles: Content page

--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -6,7 +6,7 @@
  # @author Jérémy Levron <jeremylevron@19h47.fr> (https://19h47.fr)
  #}
 
-<header class="{{ html_classes( 'py-3 lg:py-6 relative', classes | default( [] ) | join( ' ' ) ) }}">
+<header class="{{ html_classes( 'py-3 lg:py-6', classes | default( [] ) | join( ' ' ) ) }}">
 	<div class="container sm:grid sm:grid-cols-12 sm:gap-6">
 		<a href="{{ site.link }}" class="text-2xl font-heading text-center block sm:inline-block sm:align-middle sm:text-left sm:col-span-6 lg:col-span-5">
 			Le parc<br>
