--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -30,28 +30,27 @@
 		<div id="{{ post.id ? "page-#{post.id}" : 'page' }}" {{ body_class( 'page-content relative overflow-hidden' ) }}>
 
 			{% block header %}
-				{{- include( 'header.html.twig', { classes: [ '' ] } ) -}}
+				{{- include( 'header.html.twig', { classes: [ 'text-white absolute top-0 inset-x-0' ] } ) -}}
 			{% endblock %}
 
 			{% block content %}
 				<main>
 
+					<div class="bg-yellow-dark-moderate text-white pt-48 lg:pt-[10.5rem] pb-6 lg:pb-12">
+						<div class="container grid grid-cols-12">
+
+
+							<h1
+								class="{{ html_classes( 'text-6xl font-heading col-start-5 col-span-4 text-center flex justify-center' ) }}"
+							>{{- post.title -}}</h1>
+						</div>
+					</div>
+
 					{%- if post.content -%}
-
-							<div class="container">
-
-
-										<h1
-											class="{{ html_classes( '' ) }}"
-										>{{- post.title -}}</h1>
-
-
-									{%- if post.content -%}
-										<div class="">
-											{{- post.content -}}
-										</div>
-									{%- endif -%}
-
+							<div class="container my-12 lg:my-24 lg:grid lg:grid-cols-12">
+								<div class="lg:col-start-2 col-span-10 wysiwyg">
+									{{- post.content -}}
+								</div>
 							</div>
 						</div>
 					{%- endif -%}
