--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -30,7 +30,7 @@
 		<div id="{{ post.id ? "page-#{post.id}" : 'page' }}" {{ body_class( 'page-content relative overflow-hidden' ) }}>
 
 			{% block header %}
-				{{- include( 'header.html.twig', { classes: [ 'text-white absolute top-0 inset-x-0' ] } ) -}}
+				{{- include( 'header.html.twig', { classes: [ 'text-white absolute top-0 inset-x-0 z-10' ] } ) -}}
 			{% endblock %}
 
 			{% block content %}
@@ -48,7 +48,7 @@
 
 					{%- if post.content -%}
 							<div class="container my-12 lg:my-24 lg:grid lg:grid-cols-12">
-								<div class="lg:col-start-2 col-span-10 wysiwyg">
+								<div class="lg:col-start-2 col-span-6 wysiwyg">
 									{{- post.content -}}
 								</div>
 							</div>
