--- a/views/components/hero.html.twig
+++ b/views/components/hero.html.twig
@@ -25,7 +25,7 @@
 	{%- endif -%}
 
 	{%- if hero.cottages -%}
-		{% set cottages = get_posts( {post_type: 'cottage', post__in: hero.cottages } ) %}
+		{% set cottages = get_posts( { post_type: 'cottage', post__in: hero.cottages, orderby: 'post__in' } ) %}
 		<div class="{{ html_classes( 'container relative z-3 grid grid-cols-12 gap-6' ) }}">
 			{% for cottage in cottages %}
 				<div class="{{ html_classes( loop.first ? 'lg:col-start-2' : '', 'col-span-12 lg:col-span-5' ) }}">
@@ -35,7 +35,7 @@
 		</div>
 	{%- elseif thumbnail -%}
 		<div class="{{ html_classes( 'container relative z-3 grid grid-cols-12 gap-6' ) }}">
-			<div class="lg:col-start-2 col-span-12 lg:col-span-10 h-[17.25rem] lg:h-[34.5rem]">
+			<div class="col-span-12 lg:col-span-6 lg:col-start-4 lg:h-[34.5rem]">
 				{{- include( 'components/image.html.twig', { classes: [ 'w-full h-full object-cover' ], image: thumbnail } ) -}}
 			</div>
 		</div>
